Retrieve NTP thumbnail URLs from the right frame

The SearchBox instance, which stores state used in NTP, only lives on the main
frame. In one instance where we looked this up we mistakenly looked in the child
frame.

BUG=681749

Review-Url: https://codereview.chromium.org/2646133003
Cr-Commit-Position: refs/heads/master@{#445072}

Former-commit-id: 73a0a9657be8e61ebb32464455454cd631ee2a80